comment to remember venv activation

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ pytest
 selenium
 pytest-cov
 # Dash testing is covered separately in week 4: dash[testing] or dash\[testing]
+
+# .venv\Scripts\activate
